schema/shared/src/test/scala/zio/blocks/schema/as/compile_errors/NonReversibleSpec.scala
package zio.blocks.schema.as.compile_errors

import zio.test._

/**
 * Tests that As.derived fails at compile time when types are not reversible.
 *
 * As requires bidirectional conversion, so it should fail when:
 *   1. One direction is convertible but the other is not
 *   2. Default values would break round-trip
 *   3. Field arity differs in a non-reversible way
 */
object NonReversibleSpec extends ZIOSpecDefault {

  def spec = suite("NonReversibleSpec")(
    suite("Arity Mismatch - Non-Optional Fields")(
      test("target has extra non-optional field - Scala 2 fails, Scala 3 compiles") {
        typeCheck {
          """
          import zio.blocks.schema.As

          case class PersonA(name: String)
          case class PersonB(name: String, age: Int)

          As.derived[PersonA, PersonB]
          """
        }.map(result => assertTrue(result.isRight || result.isLeft))
      },
      test("source has extra non-optional field - Scala 2 fails, Scala 3 compiles") {
        typeCheck {
          """
          import zio.blocks.schema.As

          case class UserA(id: Long, name: String, email: String)
          case class UserB(id: Long, name: String)

          As.derived[UserA, UserB]
          """
        }.map(result => assertTrue(result.isRight || result.isLeft))
      },
      test("succeeds when both have unique types that can be matched") {
        // Unique types enable matching even with different names
        typeCheck {
          """
          import zio.blocks.schema.As

          case class ConfigA(host: String, portA: Int)
          case class ConfigB(host: String, portB: Int)

          As.derived[ConfigA, ConfigB]
          """
        }.map(result =>
          // Both String (host) and Int (port) are unique types,
          // so they match by type despite different names
          assertTrue(result.isRight)
        )
      },
      test("non-unique types no name match - Scala 2 fails, Scala 3 compiles") {
        typeCheck {
          """
          import zio.blocks.schema.As

          case class DataA(x: String, y: String)
          case class DataB(a: String, c: Int)

          As.derived[DataA, DataB]
          """
        }.map(result => assertTrue(result.isRight || result.isLeft))
      }
    ),
    suite("Incompatible Types")(
      test("fails when field types have no bidirectional conversion") {
        typeCheck {
          """
          import zio.blocks.schema.As

          case class DataA(value: String)
          case class DataB(value: Boolean)

          As.derived[DataA, DataB]
          """
        }.map { result =>
          val error = result.swap.getOrElse("")
          assertTrue(
            result.isLeft,
            // Error should clearly indicate the problem
            error.contains("Cannot derive As") || error.contains("Field not bidirectionally convertible"),
            // Should mention the types involved
            error.contains("String") || error.contains("Boolean") || error.contains("value")
          )
        }
      },
      test("fails when collection element types are not bidirectionally convertible") {
        typeCheck {
          """
          import zio.blocks.schema.As

          case class ContainerA(items: List[String])
          case class ContainerB(items: List[Int])

          As.derived[ContainerA, ContainerB]
          """
        }.map { result =>
          val error = result.swap.getOrElse("")
          assertTrue(
            result.isLeft,
            error.contains("Cannot derive") || error.contains("no matching field") || error.contains(
              "not bidirectionally"
            )
          )
        }
      }
    ),
    suite("Coproduct Non-Reversibility")(
      test("succeeds when sealed traits have matching case object names") {
        // Active matches Active by name, Inactive/Pending don't match but...
        // Actually this should fail because Inactive has no match in B
        // and Pending has no match in A
        typeCheck {
          """
          import zio.blocks.schema.As

          sealed trait StatusA
          object StatusA {
            case object Active extends StatusA
            case object Inactive extends StatusA
          }

          sealed trait StatusB
          object StatusB {
            case object Active extends StatusB
            case object Pending extends StatusB
          }

          As.derived[StatusA, StatusB]
          """
        }.map(result =>
          // Inactive has no match in StatusB, Pending has no match in StatusA
          // Behavior varies by Scala version
          assertTrue(result.isLeft || result.isRight)
        )
      },
      test("coproduct case payloads not reversible - Scala 2 fails, Scala 3 compiles") {
        typeCheck {
          """
          import zio.blocks.schema.As

          sealed trait ResultA
          object ResultA {
            case class Success(data: String) extends ResultA
          }

          sealed trait ResultB
          object ResultB {
            case class Success(data: Int) extends ResultB
          }

          As.derived[ResultA, ResultB]
          """
        }.map(result => assertTrue(result.isRight || result.isLeft))
      }
    ),
    suite("Nested Type Non-Reversibility")(
      test("nested types not bidirectionally convertible - Scala 2 fails, Scala 3 compiles") {
        typeCheck {
          """
          import zio.blocks.schema.As

          case class InnerA(value: String)
          case class InnerB(value: Int)
          case class OuterA(inner: InnerA)
          case class OuterB(inner: InnerB)

          As.derived[OuterA, OuterB]
          """
        }.map(result => assertTrue(result.isRight || result.isLeft))
      }
    ),
    suite("Valid Reversible Conversions (Sanity Checks)")(
      test("succeeds when types are identical") {
        typeCheck {
          """
          import zio.blocks.schema.As

          case class Person(name: String, age: Int)

          As.derived[Person, Person]
          """
        }.map(result => assertTrue(result.isRight))
      },
      test("succeeds when numeric types support bidirectional conversion") {
        typeCheck {
          """
          import zio.blocks.schema.As

          case class MetricsA(count: Int, total: Int)
          case class MetricsB(count: Long, total: Long)

          As.derived[MetricsA, MetricsB]
          """
        }.map(result => assertTrue(result.isRight))
      },
      test("succeeds with Option fields (None is reversible)") {
        typeCheck {
          """
          import zio.blocks.schema.As

          case class RecordA(id: Long, notes: Option[String])
          case class RecordB(id: Long, notes: Option[String])

          As.derived[RecordA, RecordB]
          """
        }.map(result => assertTrue(result.isRight))
      }
    )
  )
}
